--- a/36/style.css
+++ b/36/style.css
@@ -86,6 +86,12 @@ div {
   25% {
     -webkit-transform: rotate(-180deg);
     transform: rotate(-180deg);
+    z-index: 0;
+  }
+  25.01% {
+    -webkit-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+    z-index: 2;
   }
   50% {
     -webkit-transform: rotate(0deg);
@@ -95,6 +101,12 @@ div {
   75% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
+    z-index: 2;
+  }
+  75.01% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    z-index: 0;
   }
   100% {
     -webkit-transform: rotate(180deg);
@@ -109,6 +121,12 @@ div {
   25% {
     -webkit-transform: rotate(-180deg);
     transform: rotate(-180deg);
+    z-index: 0;
+  }
+  25.01% {
+    -webkit-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+    z-index: 2;
   }
   50% {
     -webkit-transform: rotate(0deg);
@@ -118,6 +136,12 @@ div {
   75% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
+    z-index: 2;
+  }
+  75.01% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    z-index: 0;
   }
   100% {
     -webkit-transform: rotate(180deg);
