--- a/36/style.css
+++ b/36/style.css
@@ -52,31 +52,23 @@ div {
   animation: myfirst4 2s linear 0s infinite;
 }
 .group .div5 {
-  width: 0;
-  height: 0;
-  border: 140px solid;
-  border-radius: 140px;
+  width: 270px;
+  height: 270px;
+  background: transparent;
+  border: 10px solid;
+  border-radius: 270px;
   border-top-color: transparent;
   border-right-color: #fc57ac;
   border-bottom-color: #fc57ac;
   border-left-color: #fc57ac;
   position: absolute;
-  top: -40px;
-  left: -40px;
+  top: -35px;
+  left: -35px;
   -webkit-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
   transform: rotate(0deg);
   -webkit-animation: myfirst5 2s linear 0s infinite;
   animation: myfirst5 2s linear 0s infinite;
-}
-.group .div6 {
-  width: 270px;
-  height: 270px;
-  border-radius: 135px;
-  background: #fff;
-  position: absolute;
-  top: -35px;
-  left: -35px;
 }
 @-webkit-keyframes myfirst1 {
   0% {
